--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="An inline grader app that you can upload a standardized rubric to">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript, React, Redux, Grading">
+    <meta name="author" content="Luis Naranjo">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
@@ -13,7 +16,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Inline Grader</title>
   </head>
   <body>
     <div id="root"></div>
